--- a/Informe UCIRAG SAN JUAN - LA PAMPA - CHACO.qmd
+++ b/Informe UCIRAG SAN JUAN - LA PAMPA - CHACO.qmd
@@ -3,7 +3,7 @@ title: "Informe UCIRAG San Juan"
 author: "Rodrigo Nieva, Gimena Romano, Andrea Rodríguez, José Usero, Vanesa Sejas"
 format:
   html:
-    css: styles.css       # <── aquí dentro de html
+    css: styles.css       
     resources:
       - raw.png
 link-citations: true
@@ -13,34 +13,6 @@ execute:
   warning: false
   message: false
 ---
-
-![](Archivos/Epidemiología.jpg)
-
-# INFORME UCIRAG SAN JUAN
-
-## INTRODUCCIÓN
-
-La vigilancia centinela implica la recolección de datos en forma sistemática y oportuna, a través de un número limitado de establecimientos seleccionados en base a ciertos criterios preespecificados. La Red de Vigilancia Centinela debe tener representatividad geográfica y poblacional. De esta manera, la información recopilada en dichos sitios podría ser de utilidad para caracterizar a un grupo poblacional mayor del que la muestra es representativa. La Organización Mundial de la Salud recomienda la implementación de sistemas de vigilancia centinela de hospitalizaciones por infección respiratoria aguda grave (IRAG) integrado con el componente de laboratorio para la detección de virus respiratorios con potencial epidémico y pandémico – SARS-CoV-2, influenza y VSR.
-
-En este informe, se presentarán los resultados del análisis de los datos de IRAG de la Unidad Centinela del Hospital Descentralizado Dr. Guillermo Rawson de la Provincia de San Juan, ubicado en la capital de la Provincia, el cual cuenta atención pediátrica y adultos, unidad de cuidados intensivos de ambos grupos etarios y laboratorio Recibe a más de 1.600 pacientes por día y cuenta con un total de 520 camas. Hospital Rawson con el máximo nivel de Atención Médica (Grado VIII) y el más alto en Complejidad Hospitalaria (Grado IV), por realizar enseñanza, adiestramiento e investigación en todas las disciplinas, por contar con las especialidades más complejas, tanto en consulta, internación, diagnóstico y tratamiento.
-
-## OBJETIVOS
-
--   Caracterizar las tendencias de los casos de IRAG a través de variables epidemiológicas, clínicas y del diagnóstico etiológico.
-
--   Identificar la frecuencia y distribución de los agentes etiológicos bajo vigilancia (VSR, Influenza, SARS CoV-2) en la internación y mortalidad por IRAs.
-
-## METODOLOGÍA
-
-### **Período de estudio**
-
-Desde el 2 de junio de 2024 al 31 de mayo de 2025 (SE23/2024 a SE23/2025).
-
-### **Análisis de datos e indicadores**
-
-(Texto, explicar)
-
-## **Vigilancia centinela de IRAG - Notificación nominal**
 
 ```{r}
 #| label: Cargar Scripts
@@ -59,6 +31,36 @@ source("Script/Positividad por SE.R")
 
 ```
 
+![](Archivos/Epidemiología.jpg)
+
+## INTRODUCCIÓN
+
+La vigilancia centinela implica la recolección de datos en forma sistemática y oportuna, a través de un número limitado de establecimientos seleccionados en base a ciertos criterios preespecificados. La Red de Vigilancia Centinela debe tener representatividad geográfica y poblacional. De esta manera, la información recopilada en dichos sitios podría ser de utilidad para caracterizar a un grupo poblacional mayor del que la muestra es representativa. La Organización Mundial de la Salud recomienda la implementación de sistemas de vigilancia centinela de hospitalizaciones por infección respiratoria aguda grave (IRAG) integrado con el componente de laboratorio para la detección de virus respiratorios con potencial epidémico y pandémico – SARS-CoV-2, influenza y VSR.
+
+En este informe, se presentarán los resultados del análisis de los datos de IRAG de la Unidad Centinela del Hospital Descentralizado Dr. Guillermo Rawson de la Provincia de San Juan, ubicado en la capital de la Provincia, el cual cuenta atención pediátrica y adultos, unidad de cuidados intensivos de ambos grupos etarios y laboratorio Recibe a más de 1.600 pacientes por día y cuenta con un total de 520 camas. Hospital Rawson con el máximo nivel de Atención Médica (Grado VIII) y el más alto en Complejidad Hospitalaria (Grado IV), por realizar enseñanza, adiestramiento e investigación en todas las disciplinas, por contar con las especialidades más complejas, tanto en consulta, internación, diagnóstico y tratamiento.
+
+## OBJETIVOS
+
+-   Caracterizar las tendencias de los casos de IRAG a través de variables epidemiológicas, clínicas y del diagnóstico etiológico.
+
+-   Identificar la frecuencia y distribución de los agentes etiológicos bajo vigilancia (VSR, Influenza, SARS CoV-2) en la internación por IRAs.
+
+## METODOLOGÍA
+
+### **Período de estudio**
+
+El análisis se realizó en el periodo comprendido entre la SE`r SE_min` de `r año_min` a SE`r SE_max` de `r año_max`.
+
+### **Análisis de datos e indicadores**
+
+Texto, explicar
+
+## **Vigilancia centinela de IRAG**
+
+## CASOS INTERNADOS DE IRAG E IRAG EXTENDIDA
+
+explicacion
+
 ```{r}
 #| echo: false
 #| message: false
@@ -71,7 +73,7 @@ grafico_casos_SE
 
 ## AGENTES ETIOLÓGICOS
 
-Entre la SE23 y SE33 de 2024 se detectó Influenza A, en su mayoría sin subtificar y una detección de H1N1. Entre la SE34 de 2024 y SE15 de 2025 no hubo detecciones de Influenza y a partir de la SE16 de 2025 se detectó circulación viral de Influenza. La frecuencia total de Influenza en todo el periodo fue de `r total_influenza` detecciones, que representa el `r prop_influenza` % del total.
+Entre la SE23 y SE33 de 2024 se detectó Influenza A, en su mayoría sin subtificar y una detección de H1N1. Entre la SE34 de 2024 y SE15 de 2025 no hubo detecciones de Influenza y a partir de la SE16 de 2025 se detectó circulación viral de Influenza. La frecuencia total de Influenza en todo el periodo fue de `r total_influenza` detecciones, que representa el `r prop_influenza`% del total.
 
 Entre la SE27 y SE38 de 2024 la mayor frecuencia respecto de las detecciones correspondieron a VSR, y no se registraron detecciones en todo el periodo restante. En el periodo analizado se registraron un total de `r total_vsr` detecciones.
 
@@ -100,7 +102,7 @@ DESCRIPTIVO
 grafico_agentes_edad
 ```
 
-La positividad de virus respiratorios para el periodo analizado es de `r positividad_influenza` % para Influenza, `r positividad_vsr` % para VSR y `r positividad_sars` % para SARS-CoV-2. Los valores de positividad por SE acompañan la curva epidémica, y a excepcion de algunas semanas en particular, no superan el 50%.
+La positividad de virus respiratorios para el periodo analizado es de `r positividad_influenza`% para Influenza, `r positividad_vsr`% para VSR y `r positividad_sars`% para SARS-CoV-2. Los valores de positividad por SE acompañan la curva epidémica, y a excepcion de algunas semanas en particular, no superan el 50%.
 
 ```{r}
 #| label: GRÁFICO positividad
